@@ -1,3 +1,5 @@
+	July 15th, 2007 (0.7.3):
+		* Fixed scoped_lock bug in CallScheduler, which could have caused undefined behavior upon a call timeout.
 	March 13th, 2007 (0.7.2): 
 		* Fixed some minor problems in the CallScheduler::syncCall templates.
 		* Renamed the demo projects
